--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
+limberframework = {editable = true, path = "."}
+psycopg2 = "*"
 
 [packages]
+sqlalchemy = "==1.3.18"
 
 [requires]
 python_version = "3.8"
