--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 pytest = "*"
 limberframework = {editable = true, path = "."}
 psycopg2 = "*"
+pylint = "*"
 
 [packages]
 sqlalchemy = "==1.3.18"
