--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,13 @@ pytest = "*"
 limberframework = {editable = true, path = "."}
 psycopg2 = "*"
 pylint = "*"
+coverage = "*"
+pytest-asyncio = "*"
 
 [packages]
 sqlalchemy = "==1.3.18"
 fastapi = "==0.59.0"
+pydantic = "==1.6.1"
 
 [requires]
 python_version = "3.8"
