--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ python = "~3.8"
 sqlalchemy = "1.3.18"
 fastapi = "0.59.0"
 pydantic = "1.6.1"
-psycopg2-binary = "2.8.5"
+psycopg2 = "2.8.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
