--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ sqlalchemy = "1.3.18"
 fastapi = "0.59.0"
 pydantic = "1.6.1"
 psycopg2 = "2.8.5"
+redis = "3.5.3"
+pymemcache = "3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
