--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,11 @@ repos:
       rev: 3.8.3
       hooks:
         - id: flake8
+    - repo: local
+      hooks:
+        - id: pytest
+          name: pytest
+          entry: pytest
+          language: system
+          types: [python]
+          pass_filenames: false
