--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+    - repo: https://github.com/PyCQA/isort
+      rev: 5.4.2
+      hooks:
+      -   id: isort
     - repo: https://github.com/psf/black
       rev: 20.8b1
       hooks:
