--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = "1.6.1"
 psycopg2 = "2.8.5"
 redis = "3.5.3"
 pymemcache = "3.2.0"
+aioredis = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
