--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2 = "2.8.5"
 redis = "3.5.3"
 pymemcache = "3.2.0"
 aioredis = "^1.3.1"
+aioredlock = "^0.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
