--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,3 +20,7 @@ repos:
           language: system
           types: [python]
           pass_filenames: false
+    - repo: https://github.com/pycqa/pydocstyle
+      rev: 5.1.1
+      hooks:
+        - id: pydocstyle
