--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ documentation = "https://github.com/limber-project/limberframework/wiki"
 keywords = ["python", "fastapi"]
 
 [tool.poetry.dependencies]
-python = "~3.8"
+python = ">=3.8, <=3.9.0"
 sqlalchemy = "1.3.18"
 fastapi = "0.59.0"
 pydantic = "1.6.1"
@@ -31,6 +31,7 @@ pylint = "2.5.3"
 coverage = "5.2.1"
 pytest-asyncio = "0.14.0"
 pre-commit = "2.7.1"
+tox = "^3.20.1"
 
 [tool.black]
 line-length = 79
