--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ redis = "3.5.3"
 pymemcache = "3.2.0"
 aioredis = "^1.3.1"
 aioredlock = "^0.5.2"
+mysqlclient = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
