--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pymemcache = "3.2.0"
 aioredis = "^1.3.1"
 aioredlock = "^0.5.2"
 mysqlclient = "^2.0.2"
+elasticsearch-dbapi = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
